<resources>
    <string name="app_name">VPN UI</string>

    <!--Privacy Activity-->
    <string name="privacy_activity_setup_configuration_btn_title">Tap to Setup Configuration</string>
    <string name="privacy_activity_agree_continue_btn_title">Agree and Continue</string>

    <!--Privacy Activity - VPN Configuration-->
    <string name="privacy_activity_setup_vpn_configuration_title">Setup VPN configuration</string>
    <string name="privacy_activity_allow_vpn_configuration_text">Allow VPN to add configurations to your device.</string>
    <string name="privacy_activity_add_vpn_configuration_text">“VPN” Would like to Add VPN Configurations</string>
    <string name="privacy_activity_do_not_allow_btn_text">Don’t Allow</string>
    <string name="privacy_activity_allow_btn_text">Allow</string>
    <string name="privacy_activity_enter_passcode_text">Enter your passcode to confirm</string>

    <!--Privacy Activity - Privacy Details-->
    <string name="privacy_activity_your_privacy_text">Your privacy comes first</string>
    <string name="privacy_activity_privacy_details_text">To provide you with a fast and reliable VPN service, we collect a minimum amount of data.\n\nWe Collect:\n\n1. Device-specific information such as OS version, hardware model, and IP address to optimize our network connection to you. We do not store or log your IP address after you disconnect from the VPN.\n\n2. Aggregated anonymous website activity data, to perform analytics on our service and to ensure you can reliably access certain websites or apps.\n\n3. Total bandwidth consumed and time connected to our VPN service.\n\nWe do not keep logs of your online activities and never associate any domains or applications that you use with you, your device, IP address, or email.\n\nFor more information, please read our Privacy Policy.</string>

    <!--Home Activity-->
    <string name="home_activity_go_premium_title">Go Premium!</string>
    <string name="home_activity_vpn_off_title">VPN IS OFF</string>
    <string name="home_activity_vpn_on_title">VPN IS ON</string>
    <string name="home_activity_auto_title">Auto</string>
    <string name="home_activity_select_location_title">Select\nLocation</string>
    <string name="home_activity_get_premium_title">GET\nPREMIUM</string>
    <string name="home_activity_now_title">NOW</string>
    <string name="home_activity_faster_speed_title">Faster Speed</string>
    <string name="home_activity_worldwide_location_title">Worldwide Location</string>
    <string name="home_activity_streaming_servers_title">Streaming Servers</string>
    <string name="home_activity_no_ads_title">No Ads</string>
    <string name="home_activity_save_ads_title">Save 36%</string>
    <string name="home_activity_yearly_plan_title">Yearly Plan</string>
    <string name="home_activity_private_browser_title">Private Browser</string>
    <string name="home_activity_advanced_features_title">Advanced Features</string>

    <!--Home Activity - Nav Menu-->
    <string name="nav_menu_sign_in_title">Sign In / Sign Up</string>
    <string name="nav_menu_free_account_title">Free Account</string>
    <string name="nav_menu_support_title">Support</string>
    <string name="nav_menu_proxy_server_title">Proxy Server</string>
    <string name="nav_menu_use_on_other_title">Use On Other Devices</string>
    <string name="nav_menu_language_title">Language</string>
    <string name="nav_menu_about_title">About</string>
    <string name="nav_menu_rate_us_title">Rate Us</string>
    <string name="nav_menu_share_vpn_title">Share VPN</string>

    <!--Notification Activity-->
    <string name="notification_activity_notification_title">Notification</string>
    <string name="notification_activity_no_messages">No Message Right Now</string>

    <!--Language Activity-->
    <string name="language_activity_title">Language</string>

    <string-array name="language_options">
        <item>Auto</item>
        <item>English</item>
        <item>Chinese</item>
        <item>Arabic</item>
        <item>Spanish</item>
        <item>Portuguese</item>
        <item>French</item>
        <item>Bengali</item>
        <item>Persian</item>
        <item>Vietnamese</item>
        <item>Thai</item>
    </string-array>

    <!--Use On Other Devices Activity-->
    <string name="use_other_activity_title">Use On Other Devices</string>
    <string name="use_other_activity_login_passcode_title">Login via passcode</string>
    <string name="use_other_activity_other_devices_text">PC, Mac, Tv, and other devices</string>
    <string name="use_other_activity_for_all_devices_title">For All Devices</string>
    <string name="use_other_activity_for_all_other_devices_text">PC, Mac, Router, and others</string>

    <!--For All Devices Activity-->
    <string name="for_all_devices_activity_title">For All Devices</string>
    <string name="for_all_devices_others_device_title">For Windows, Mac, and others</string>
    <string name="for_all_devices_others_device_descriptions">VPN has extended the VPN service on PCs, including Windows and Mac.\n\nSecure your internet traffic, access various websites, and stream your favourite content on your computer now.\n\nJust enter <a href="https://flashvpn.com">https://flashvpn.com</a> in your browser to check out our official website for more information.</string>

    <!--Select Location Activity-->
    <string name="select_location_activity_title">Select Location</string>
    <string name="select_location_activity_for_all_location_text">for all location</string>
    <string name="select_location_activity_search_location_text">Search for country, city and streaming</string>
    <string name="select_location_activity_recommended_text">Recommended</string>

    <!--Premium Activity-->
    <string name="premium_activity_enjoy_exclusive_text">Enjoy Exclusive Benefits of Premium</string>
    <string name="premium_activity_free_text">Free</string>
    <string name="premium_activity_premium_text">Premium</string>
    <string name="premium_activity_protocols_text">Protocols</string>
    <string name="premium_activity_5_text">5</string>
    <string name="premium_activity_11_text">11</string>
    <string name="premium_activity_speed_text">Speed</string>
    <string name="premium_activity_fast_text">Fast</string>
    <string name="premium_activity_ultra_fast_text">Ultra Fast</string>
    <string name="premium_activity_locations_text">Locations</string>
    <string name="premium_activity_10_text">10</string>
    <string name="premium_activity_50_text">50+</string>
    <string name="premium_activity_servers_text">Servers</string>
    <string name="premium_activity_100_text">100+</string>
    <string name="premium_activity_5000_text">5000+</string>
    <string name="premium_activity_no_ads_text">No Ads</string>
    <string name="premium_activity_support_text">1 : 1 Support</string>
    <string name="premium_activity_yearly_text">Yearly</string>
    <string name="premium_activity_best_value_text">Best Value</string>
    <string name="premium_activity_yearly_plan_text">First 7 days free |  Then $73.99 per year</string>
    <string name="premium_activity_monthly_text">Monthly</string>
    <string name="premium_activity_monthly_plan_text">First 7 days free | Then $ 12.49 per month</string>
    <string name="premium_activity_weekly_text">Weekly</string>
    <string name="premium_activity_weekly_plan_text">First 7 days free | Then $ 3.99 per week</string>
    <string name="premium_activity_continue_text">Continue</string>
    <string name="premium_activity_sign_in_text">Sign In</string>
    <string name="premium_activity_dot_text">•</string>
    <string name="premium_activity_restore_purchase_text">Restore Purchases</string>
    <string name="premium_activity_long_text">Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat. Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat, vel illum dolore eu feugiat nulla facilisis at vero eros et accumsan et iusto odio dignissim qui blandit praesent luptatum zzril delenit augue duis dolore te feugait nulla facilisi.Lorem ipsum dolor sit amet, cons ectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper</string>

    <!--Advanced Features Activity-->
    <string name="advanced_features_activity_title">Advanced Features</string>
    <string name="advanced_features_activity_connection_log_title">Connection Log</string>
    <string name="advanced_features_activity_premium_text">Premium</string>
    <string name="advanced_features_activity_connect_to_ip_text">Connect to the IP from your connection history</string>
    <string name="advanced_features_activity_split_tunneling_title">Split Tunneling</string>
    <string name="advanced_features_activity_choose_apps_text">Choose apps to use or not use VPN tunnel</string>
    <string name="advanced_features_activity_fast_connect_title">Fast-Connect Bar</string>
    <string name="advanced_features_activity_fast_connect_way_text">4 types of fast connecting ways without opening the app</string>
    <string name="advanced_features_activity_kill_switch_title">Kill Switch</string>
    <string name="advanced_features_activity_disable_network_text">Disable all internet if VPN disconnects</string>
    <string name="advanced_features_activity_stable_connection_title">Stable Connection</string>
    <string name="advanced_features_activity_choose_stable_network_text">The connection would take longer time to choose a more stable server for you</string>
    <string name="advanced_features_activity_dark_mode_title">Dark Mode</string>
    <string name="advanced_features_activity_on_text">On</string>
    <string name="advanced_features_activity_off_text">Off</string>
    <string name="advanced_features_activity_system_text">System</string>
    <string name="advanced_features_activity_appearance_adjust_text">Appearance will adjust based on your device’s system</string>

</resources>