<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@color/light_grey_e1"
    android:padding="16dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/imgCloseBtnPrivacy"
        android:src="@drawable/ic_close_btn"
        android:layout_gravity="end"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <LinearLayout
        android:orientation="vertical"
        android:gravity="center"
        android:padding="32dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:text="@string/privacy_activity_setup_vpn_configuration_title"
            android:textSize="16sp"
            android:textColor="@color/grey_49"
            android:fontFamily="@font/stolzl_bold"
            android:layout_marginBottom="12dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:text="@string/privacy_activity_allow_vpn_configuration_text"
            android:textSize="13sp"
            android:textColor="@color/light_grey_7d"
            android:fontFamily="@font/stolzl_regular"
            android:gravity="center"
            android:layout_marginBottom="24dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <com.google.android.material.card.MaterialCardView
            android:backgroundTint="@color/white"
            app:strokeColor="@color/white"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:text="@string/privacy_activity_add_vpn_configuration_text"
                    android:textSize="15sp"
                    android:textColor="@color/grey_49"
                    android:fontFamily="@font/stolzl_medium"
                    android:layout_marginTop="16dp"
                    android:layout_marginBottom="20dp"
                    android:layout_marginHorizontal="16dp"
                    android:gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

                <View
                    android:background="@drawable/bg_view_round_radius"
                    android:layout_marginHorizontal="32dp"
                    android:layout_marginBottom="12dp"
                    android:layout_width="match_parent"
                    android:layout_height="9dp"/>

                <View
                    android:background="@drawable/bg_view_round_radius"
                    android:layout_marginHorizontal="32dp"
                    android:layout_marginBottom="20dp"
                    android:layout_width="match_parent"
                    android:layout_height="9dp"/>

                <View
                    android:background="@color/view_bg_grey_d9"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"/>

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:text="@string/privacy_activity_do_not_allow_btn_text"
                        android:textColor="@color/blue_14"
                        android:textSize="15sp"
                        android:fontFamily="@font/stolzl_regular"
                        android:gravity="center"
                        android:padding="12dp"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"/>

                    <View
                        android:background="@color/view_bg_grey_d9"
                        android:layout_width="1dp"
                        android:layout_height="match_parent"/>

                    <TextView
                        android:text="@string/privacy_activity_allow_btn_text"
                        android:textColor="@color/blue_14"
                        android:textSize="15sp"
                        android:fontFamily="@font/stolzl_medium"
                        android:gravity="center"
                        android:padding="12dp"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"/>

                </LinearLayout>

            </LinearLayout>

        </com.google.android.material.card.MaterialCardView>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_marginTop="12dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <View
                android:visibility="invisible"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"/>

            <ImageView
                android:src="@drawable/ic_point_arrow"
                android:layout_gravity="end"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"/>

        </LinearLayout>

        <TextView
            android:text="@string/privacy_activity_enter_passcode_text"
            android:textColor="@color/light_grey_7d"
            android:textSize="13sp"
            android:fontFamily="@font/stolzl_medium"
            android:gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </LinearLayout>

</LinearLayout>