<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:background="@color/light_grey_e1"
    android:padding="16dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_marginVertical="24dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:src="@drawable/profile_picture"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <LinearLayout
                android:orientation="vertical"
                android:layout_marginStart="12dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:text="@string/nav_menu_sign_in_title"
                    android:textSize="12sp"
                    android:textColor="@color/button_bg_18"
                    android:fontFamily="@font/stolzl_medium"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

                <TextView
                    android:text="@string/nav_menu_free_account_title"
                    android:textSize="11sp"
                    android:textColor="@color/grey_49"
                    android:fontFamily="@font/stolzl_regular"
                    android:layout_marginTop="12dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

            </LinearLayout>

        </LinearLayout>

        <RelativeLayout
            android:background="@drawable/rounded_shape_design"
            android:padding="8dp"
            android:elevation="5dp"
            android:layout_centerVertical="true"
            android:layout_alignParentEnd="true"
            android:layout_marginHorizontal="16dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <ImageView
                android:src="@drawable/ic_arrow_right_nav"
                android:layout_width="10dp"
                android:layout_height="10dp"/>

        </RelativeLayout>

    </RelativeLayout>

    <LinearLayout
        android:orientation="vertical"
        android:padding="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RelativeLayout
                android:background="@drawable/bg_support"
                android:gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <ImageView
                    android:src="@drawable/ic_support"
                    android:layout_marginTop="6dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

            </RelativeLayout>

            <TextView
                android:text="@string/nav_menu_support_title"
                android:textColor="@color/grey_49"
                android:fontFamily="@font/stolzl_medium"
                android:layout_marginStart="16dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        </LinearLayout>

        <View
            android:layout_marginVertical="16dp"
            android:background="@color/light_grey_d1"
            android:layout_width="match_parent"
            android:layout_height="1dp"/>

        <LinearLayout
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:src="@drawable/ic_server"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <TextView
                android:text="@string/nav_menu_proxy_server_title"
                android:textColor="@color/grey_49"
                android:fontFamily="@font/stolzl_medium"
                android:layout_marginStart="16dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        </LinearLayout>

        <View
            android:layout_marginVertical="16dp"
            android:background="@color/light_grey_d1"
            android:layout_width="match_parent"
            android:layout_height="1dp"/>

        <LinearLayout
            android:id="@+id/layoutNavUseOnOtherDevices"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:src="@drawable/ic_device"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <TextView
                android:text="@string/nav_menu_use_on_other_title"
                android:textColor="@color/grey_49"
                android:fontFamily="@font/stolzl_medium"
                android:layout_marginStart="16dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        </LinearLayout>

        <View
            android:layout_marginVertical="16dp"
            android:background="@color/light_grey_d1"
            android:layout_width="match_parent"
            android:layout_height="1dp"/>

        <LinearLayout
            android:id="@+id/layoutNavLanguage"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:src="@drawable/ic_language"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <TextView
                android:text="@string/nav_menu_language_title"
                android:textColor="@color/grey_49"
                android:fontFamily="@font/stolzl_medium"
                android:layout_marginStart="16dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        </LinearLayout>

        <View
            android:layout_marginVertical="16dp"
            android:background="@color/light_grey_d1"
            android:layout_width="match_parent"
            android:layout_height="1dp"/>

        <LinearLayout
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:src="@drawable/ic_about"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <TextView
                android:text="@string/nav_menu_about_title"
                android:textColor="@color/grey_49"
                android:fontFamily="@font/stolzl_medium"
                android:layout_marginStart="16dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        </LinearLayout>

        <View
            android:layout_marginVertical="16dp"
            android:background="@color/light_grey_d1"
            android:layout_width="match_parent"
            android:layout_height="1dp"/>

        <LinearLayout
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:src="@drawable/ic_rate_us"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <TextView
                android:text="@string/nav_menu_rate_us_title"
                android:textColor="@color/grey_49"
                android:fontFamily="@font/stolzl_medium"
                android:layout_marginStart="16dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        </LinearLayout>

        <View
            android:layout_marginVertical="16dp"
            android:background="@color/light_grey_d1"
            android:layout_width="match_parent"
            android:layout_height="1dp"/>

        <LinearLayout
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:src="@drawable/ic_share"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <TextView
                android:text="@string/nav_menu_share_vpn_title"
                android:textColor="@color/grey_49"
                android:fontFamily="@font/stolzl_medium"
                android:layout_marginStart="16dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>