<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@color/light_grey_e1"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include
        android:id="@+id/layoutUseOtherDevicesHeader"
        layout="@layout/item_header_activity"/>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cardViewLoginViaPasscode"
        app:cardBackgroundColor="@color/light_grey_e1"
        app:strokeColor="@android:color/transparent"
        app:cardElevation="5dp"
        android:layout_marginHorizontal="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:orientation="horizontal"
            android:padding="16dp"
            android:gravity="center_vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:src="@drawable/ic_passcode"
                android:layout_marginEnd="16dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:text="@string/use_other_activity_login_passcode_title"
                    android:textColor="@color/grey_49"
                    android:textSize="12sp"
                    android:fontFamily="@font/stolzl_medium"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

                <TextView
                    android:text="@string/use_other_activity_other_devices_text"
                    android:textColor="@color/light_grey_7d"
                    android:textSize="11sp"
                    android:fontFamily="@font/stolzl_regular"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

            </LinearLayout>

        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cardViewForAllDevices"
        app:cardBackgroundColor="@color/light_grey_e1"
        app:strokeColor="@android:color/transparent"
        app:cardElevation="5dp"
        android:layout_marginTop="16dp"
        android:layout_marginHorizontal="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:orientation="horizontal"
            android:padding="16dp"
            android:gravity="center_vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:src="@drawable/ic_device"
                android:layout_marginEnd="16dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:text="@string/use_other_activity_for_all_devices_title"
                    android:textColor="@color/grey_49"
                    android:textSize="12sp"
                    android:fontFamily="@font/stolzl_medium"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

                <TextView
                    android:text="@string/use_other_activity_for_all_other_devices_text"
                    android:textColor="@color/light_grey_7d"
                    android:textSize="11sp"
                    android:fontFamily="@font/stolzl_regular"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

            </LinearLayout>

        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>

</LinearLayout>